--- a/src/components/Timer/DisplayCountdown/index.css
+++ b/src/components/Timer/DisplayCountdown/index.css
@@ -14,13 +14,13 @@
   font-weight: 600;
 }
 
-.Display__labels {
+.DisplayCountdown .Display__labels {
   display: flex;
   justify-content: center;
   width: 100%;
 }
 
-.Display__label {
+.DisplayCountdown .Display__label {
   color: #999;
   font-size: 12px;
   font-weight: 600;
